trabalho2/LF3-enunciado/ParLF.y
-- -*- haskell -*- File generated by the BNF Converter (bnfc 2.9.5).

-- Parser definition for use with Happy
{
{-# OPTIONS_GHC -fno-warn-incomplete-patterns -fno-warn-overlapping-patterns #-}
{-# LANGUAGE PatternSynonyms #-}

module ParLF
  ( happyError
  , myLexer
  , pProgram
  , pFunction
  , pDecl
  , pListFunction
  , pListDecl
  , pListExp
  , pListIdent
  , pListType
  , pExp
  , pExp1
  , pExp2
  , pExp3
  , pExp4
  , pExp5
  , pExp6
  , pExp7
  , pType
  ) where

import Prelude

import qualified AbsLF
import LexLF

}

%name pProgram Program
%name pFunction Function
%name pDecl Decl
%name pListFunction ListFunction
%name pListDecl ListDecl
%name pListExp ListExp
%name pListIdent ListIdent
%name pListType ListType
%name pExp Exp
%name pExp1 Exp1
%name pExp2 Exp2
%name pExp3 Exp3
%name pExp4 Exp4
%name pExp5 Exp5
%name pExp6 Exp6
%name pExp7 Exp7
%name pType Type
-- no lexer declaration
%monad { Err } { (>>=) } { return }
%tokentype {Token}
%token
  '!'      { PT _ (TS _ 1)  }
  '&&'     { PT _ (TS _ 2)  }
  '('      { PT _ (TS _ 3)  }
  ')'      { PT _ (TS _ 4)  }
  '*'      { PT _ (TS _ 5)  }
  '+'      { PT _ (TS _ 6)  }
  '++'     { PT _ (TS _ 7)  }
  ','      { PT _ (TS _ 8)  }
  '-'      { PT _ (TS _ 9)  }
  '->'     { PT _ (TS _ 10) }
  '.'      { PT _ (TS _ 11) }
  '/'      { PT _ (TS _ 12) }
  '<'      { PT _ (TS _ 13) }
  '>'      { PT _ (TS _ 14) }
  'String' { PT _ (TS _ 15) }
  'bool'   { PT _ (TS _ 16) }
  'else'   { PT _ (TS _ 17) }
  'false'  { PT _ (TS _ 18) }
  'if'     { PT _ (TS _ 19) }
  'int'    { PT _ (TS _ 20) }
  'lambda' { PT _ (TS _ 21) }
  'then'   { PT _ (TS _ 22) }
  'true'   { PT _ (TS _ 23) }
  '{'      { PT _ (TS _ 24) }
  '||'     { PT _ (TS _ 25) }
  '}'      { PT _ (TS _ 26) }
  L_Ident  { PT _ (TV $$)   }
  L_integ  { PT _ (TI $$)   }
  L_quoted { PT _ (TL $$)   }

%%

Ident :: { AbsLF.Ident }
Ident  : L_Ident { AbsLF.Ident $1 }

Integer :: { Integer }
Integer  : L_integ  { (read $1) :: Integer }

String  :: { String }
String   : L_quoted { $1 }

Program :: { AbsLF.Program }
Program : ListFunction { AbsLF.Prog $1 }

Function :: { AbsLF.Function }
Function
  : Type Ident '(' ListDecl ')' '{' Exp '}' { AbsLF.Fun $1 $2 $4 $7 }

Decl :: { AbsLF.Decl }
Decl : Type Ident { AbsLF.Dec $1 $2 }

ListFunction :: { [AbsLF.Function] }
ListFunction
  : {- empty -} { [] } | Function ListFunction { (:) $1 $2 }

ListDecl :: { [AbsLF.Decl] }
ListDecl
  : {- empty -} { [] }
  | Decl { (:[]) $1 }
  | Decl ',' ListDecl { (:) $1 $3 }

ListExp :: { [AbsLF.Exp] }
ListExp
  : {- empty -} { [] }
  | Exp { (:[]) $1 }
  | Exp ',' ListExp { (:) $1 $3 }

ListIdent :: { [AbsLF.Ident] }
ListIdent : Ident { (:[]) $1 } | Ident ',' ListIdent { (:) $1 $3 }

ListType :: { [AbsLF.Type] }
ListType
  : {- empty -} { [] }
  | Type { (:[]) $1 }
  | Type '->' ListType { (:) $1 $3 }

Exp :: { AbsLF.Exp }
Exp
  : '<' Exp '.' Exp '>' { AbsLF.EComp $2 $4 }
  | 'lambda' ListDecl '->' Exp { AbsLF.ELambda $2 $4 }
  | 'if' '(' Exp ')' 'then' Exp 'else' Exp { AbsLF.EIf $3 $6 $8 }
  | Exp1 { $1 }

Exp1 :: { AbsLF.Exp }
Exp1 : Exp1 '||' Exp2 { AbsLF.EOr $1 $3 } | Exp2 { $1 }

Exp2 :: { AbsLF.Exp }
Exp2 : Exp2 '&&' Exp3 { AbsLF.EAnd $1 $3 } | Exp3 { $1 }

Exp3 :: { AbsLF.Exp }
Exp3 : '!' Exp3 { AbsLF.ENot $2 } | Exp4 { $1 }

Exp4 :: { AbsLF.Exp }
Exp4
  : Exp4 '++' Exp5 { AbsLF.ECon $1 $3 }
  | Exp4 '+' Exp5 { AbsLF.EAdd $1 $3 }
  | Exp4 '-' Exp5 { AbsLF.ESub $1 $3 }
  | Exp5 { $1 }

Exp5 :: { AbsLF.Exp }
Exp5
  : Exp5 '*' Exp6 { AbsLF.EMul $1 $3 }
  | Exp5 '/' Exp6 { AbsLF.EDiv $1 $3 }
  | Exp6 { $1 }

Exp6 :: { AbsLF.Exp }
Exp6 : Exp7 '(' ListExp ')' { AbsLF.ECall $1 $3 } | Exp7 { $1 }

Exp7 :: { AbsLF.Exp }
Exp7
  : Integer { AbsLF.EInt $1 }
  | Ident { AbsLF.EVar $1 }
  | String { AbsLF.EStr $1 }
  | 'true' { AbsLF.ETrue }
  | 'false' { AbsLF.EFalse }
  | '(' Exp ')' { $2 }

Type :: { AbsLF.Type }
Type
  : 'bool' { AbsLF.Tbool }
  | 'int' { AbsLF.Tint }
  | 'String' { AbsLF.TStr }
  | '(' Type ',' ListType ')' { AbsLF.TFun $2 $4 }

{

type Err = Either String

happyError :: [Token] -> Err a
happyError ts = Left $
  "syntax error at " ++ tokenPos ts ++
  case ts of
    []      -> []
    [Err _] -> " due to lexer error"
    t:_     -> " before `" ++ (prToken t) ++ "'"

myLexer :: String -> [Token]
myLexer = tokens

}
